# pathfinder-driver-generator

./: CMakeLists.txt  README.md
api-signatures/: tf2.16.txt  torch1.11.json  torch2.2.json
src/: CMakeLists.txt  api.cpp  api.h  generator.h  main.cpp  options.cpp  options.h  symarg.cpp  symarg.h  tf_api.cpp  tf_api.h  tf_cpp_apis.cpp  tf_cpp_apis.h  tf_datatype.cpp  tf_datatype.h  tf_gen.cpp  tf_gen.h  tf_generator.cpp  tf_generator.h  tf_opdef.cpp  tf_opdef.h  tf_symarg.cpp  tf_symarg.h  torch_api.cpp  torch_api.h  torch_gen.cpp  torch_gen.h  torch_generator.cpp  torch_generator.h  torch_symarg.cpp  torch_symarg.h  utils.cpp  utils.h  writer.cpp  writer.h
template/tf2.16/: BUILD  fuzzer_util.cc  fuzzer_util.h  op_check.cc  pathfinder.bzl
template/torch1.11/: CMakeLists.txt  fuzzer_util.cpp  fuzzer_util.h
template/torch2.2/: fuzzer_util.cpp  fuzzer_util.h  pathfinder.cmake
